--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
-    <TextView
+    <RadioGroup
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+    <RadioButton
+        android:id="@+id/rboBatman"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Batman"/>
+    <RadioButton
+        android:id="@+id/rboJoker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Joker" />
+    <RadioButton
+        android:id="@+id/rboHulk"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hulk" />
+    </RadioGroup>
+    <ImageView
+        android:id="@+id/ivImage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
